# AIVUS-CAA

./: .gitignore  DICOMreader.py  README.md  config.yaml  contour_based_gating.py  main.py  pyproject.toml  requirements.txt  result_plotter.py  segmenter_superpixel.py  superpixel.py  test_plotting_report.py  test_windowingslider.py  version.py  wipe_meta.py
docs/: index.rst
docs/contents/: installation.rst  key_features.rst  related_projects.rst  tutorial.rst  usage.rst
filters/: nonlocal_means.py
gating/: automatic_gating.py  contour_based_gating.py  signal_processing.py
gui/: compare_stacks.py  display.py  error_message.py  geometry.py  gui.py  segment_dialog.py  shortcuts.py  slider.py
gui/display/: IVUS_display.py  contours_gui.py  display.py  gating_display.py  longitudinal_view.py
gui/left_half/: IVUS_display.py  left_half.py
gui/main_window/: left_half.py  right_half.py
gui/popup_windows/: frame_range_dialog.py  message_boxes.py  results_plot.py  small_display.py  video_player.py
gui/right_half/: gating_display.py  longitudinal_view.py  right_half.py
gui/utils/: contours_gui.py  geometry.py  slider.py
input_output/: contours.py  contours_io.py  metadata.py  read_dicom.py  read_image.py  read_xml.py  report.py  write_xml.py
media/: logo_creater.py
preprocessing/: preprocessing.py
report/: report.py
segmentation/: model.py  neural_net.py  predict.py  save_as_nifti.py  segment.py  segment_files.py  segmentation.py  tf_predict.py  unet_segmentation.py
segmentation_train/: .gitignore  README.md  configs.py  data_preprocessing.py  ivus_3d_to_2d.py  metrics.py  models.py  predict.py  requirements.txt  train.py  utils.py
src/: config.yaml  main.py  version.py
src/gating/: automatic_gating.py  contour_based_gating.py  signal_processing.py
src/gui/: shortcuts.py
src/input_output/: contours_io.py  read_image.py  read_xml.py
src/preprocessing/: preprocessing.py
src/report/: report.py
src/segmentation/: predict.py  save_as_nifti.py  segment.py  segment_files.py
src/segmentation_train/: data_preprocessing.py  metrics.py  models.py  train.py
stats_data/: analysis.py  gating_validation.py  icc.csv  icc_analysis.r  precision_auto_gating.py
stats_data/icc/: narco_200_rest_anselm_eye.txt  narco_200_rest_anselm_eye_run2.txt  narco_200_rest_anselm_niva.txt  (+9 more)
test_cases/: anonymized_contours_0_7_4.json  anonymized_report.txt
(+44 files in other folders)
